--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" type="text/css" href="output.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.6"></script>
 
@@ -21,8 +22,8 @@
       <p>{{ origin | json }}</p>
     </div>
 
-    <ul id="app">
-      <li v-for="item in items">
+    <ul class="main-nav" id="app">
+      <li class="main-nav__item" v-for="item in items">
         {{ item.message }}
       </li>
     </ul>
