--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
     </div> -->
 
 
-    <div id="example">
-      <my-component></my-component>
-    </div>
+    <section class="svgs">
+      <my-name></my-name>
+      <my-photo></my-photo>
+    </section>
 
-    <div id="my_view">
+    <!-- <div id="my_view">
       <p>{{ origin | json }}</p>
-    </div>
+    </div> -->
 
     <ul class="main-nav" id="app">
-      <li class="main-nav__item" v-for="item in items">
-        {{ item.message }}
+      <li class="main-nav__item" v-for="item in items" v-html="item.message">
+        <!-- {{ item.message }} -->
       </li>
       <div class="ssl-warning" v-bind:class="{ active: isActive }">
         <p>Sorry, I didn't want to pay godaddy $75 for SSL so you'll need to allow your browser from unauthenticated sources</p>
@@ -32,5 +33,6 @@
     </ul>
 
     <script src="scripts.js"></script>
+    <script src="svg.js"></script>
   </body>
 </html>
