--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div> -->
 
     <ul class="main-nav" id="app">
-      <li class="main-nav__item" v-for="item in items" v-html="item.message">
+      <li class="main-nav__item" v-for="(item, index) in items" v-html="item.message" :data-postIndex="index+2">
         <!-- {{ item.message }} -->
       </li>
       <div class="ssl-warning" v-bind:class="{ active: isActive }">
