--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="col-xs-12 text-center info">
         <transition name="slide-fade">
-          <h1 class="init-header" v-if="show">Hi There</h1>
+          <h1 class="init-header" v-if="show">{{ introMessage }}</h1>
         </transition>
       </div>
     </section>
